2025-02-12T00:36:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13275377163 # 563
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-12
* notice: last 14d: unq all: 23 39
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 756 1234
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 757 1235
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-11]

2025-02-10T00:37:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13231195948 # 561
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-10
* notice: last 14d: unq all: 23 38
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 753 1231
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 756 1234
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2025-02-09]

2025-02-09T00:38:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13220703963 # 560
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-09
* notice: last 14d: unq all: 21 35
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 752 1230
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 753 1231
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-08]

2025-02-08T00:34:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13210408489 # 559