@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-12T00:36:10Z",
+  "timestamp" : "2025-02-14T00:36:11Z",
   "count_outdated" : 1196,
   "uniques_outdated" : 725,
-  "count" : 1235,
-  "uniques" : 757,
+  "count" : 1237,
+  "uniques" : 759,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -97,6 +97,24 @@
     },
     {
       "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
