@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 41,
   "uniques": 23,
   "clones": [
     {
@@ -54,6 +54,16 @@
     },
     {
       "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
